--- a/index.html
+++ b/index.html
@@ -11,34 +11,59 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="icon" href="assets/images/me.jpg">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div id="container">
-            <header>
-                <section id="content">
-                    <h1>David L. Starr</h1>
-                    <nav>
-                        <a href="index.html">About Me</a> |
-                        <a href="portfolio.html">Portfolio</a> |
-                        <a href="contact.html">Contact</a>
-                    </nav>
-                </section>   
-            </header>
-            <main>
-                <h2>About Me</h2>
-                <hr>
-                <img src="assets/images/me.jpg" width="250px" height="250px" alt="David L. Starr" class="profile">
-                <p>David Starr is a developer from Oakland, California. After graduating from Lane Tech College Prep in Chicago, Illinois in 2014, he embarked on a month-long cross-continental bicycling trip from Oslo, Norway to Athens, Greece. In addition to broadening his scope of the world's beauty and cultures, the trip also inadvertently offered time to delve into the masterpiece of The Brothers Karamazov by David's all-time favorite author Fyodor Dostoyevsky—whose philosophy developed a passion for truth that came to fruition in a variety of ways.</p>
-                <p>The fall after, David enrolled in North Park University's physics program, in a way of pursuing truth in a way he had always excelled. During his time there he joined Vista Magazine as their founding Web Content Strategist. He also independently pursued certificates in Front-End Web Development through FreeCodeCamp.org, two of which he completed in 2018. He graduated from North Park May 12, 2018 with a B.S. in Physics and Minor in Mathematics and is now enrolled in a Full-Stack Web Development Boot Camp with the University of California, Berkeley as he pursues web development in the Bay area.</p>
-            </main>
+        <div>
+            <div class="container-fluid">
+                <div class="row header">
+                    <div class="container">
+                        <header class="row">
+                            <h1 class="col-md-6 col-lg-5 col-xl-4 col-sm-12 heading text-center no-gutters">David L. Starr</h1>
+                            <div class="col-lg-2 col-xl-4 col-md-1"></div>
+                            <div class="text-right col-md-5 col-lg-5 col-xl-4 col-sm-12 no-padding">
+                                <nav class="navbar navbar-right">
+                                    <a class="nav-link nav-item active" href="index.html">About Me</a><a class="nav-link nav-item" href="portfolio.html">Portfolio</a><a class="nav-link nav-item" href="contact.html">Contact</a>
+                                </nav>
+                            </div> 
+                        </header>
+                    </div>
+                </div>
+            </div>
+            <div class="container main">
+                <main class="row">
+                    <div class="container">
+                        <div class="row">
+                            <div class="no-padding col-md-12">
+                                <h2>About Me</h2>
+                                <hr>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <img src="assets/images/me.jpg" alt="David L. Starr" class="no-padding img-fluid profile float-left col-md-3 col-sm-6">
+                                <div class="">
+                                    <p>David Starr is a developer from Oakland, California. After graduating from Lane Tech College Prep in Chicago, Illinois in 2014, he embarked on a month-long cross-continental bicycling trip from Oslo, Norway to Athens, Greece. In addition to broadening his scope of the world's beauty and cultures, the trip also inadvertently offered time to delve into the masterpiece of The Brothers Karamazov by David's all-time favorite author Fyodor Dostoyevsky—whose philosophy developed a passion for truth that came to fruition in a variety of ways.</p>
+                                    <p>The fall after, David enrolled in North Park University's physics program, in a way of pursuing truth in a way he had always excelled. During his time there he joined Vista Magazine as their founding Web Content Strategist. He also independently pursued certificates in Front-End Web Development through FreeCodeCamp.org, two of which he completed in 2018. He graduated from North Park May 12, 2018 with a B.S. in Physics and Minor in Mathematics and is now enrolled in a Full-Stack Web Development Boot Camp with the University of California, Berkeley as he pursues web development in the Bay area.</p>    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+            </div>
         </div>
-        <footer>
-            <p>Copyright David Starr 2018©</p>
-        </footer>
+        <div class="container-fluid footer">
+            <footer class="row text-center block">
+                <p class="col-xs-12">Copyright David Starr 2018 ©</p>
+            </footer>
+        </div>
         <script src="" async defer></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
