--- a/portfolio.html
+++ b/portfolio.html
@@ -47,46 +47,52 @@
                                 
                                 <section class="container-fluid">
                                     <div class="row">
-                                        <div class="col-lg-3 portfolio-item col-sm-5 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website">
-                                            <figcaption class=""><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption></div>
-                                        <div class="col-sm-5 offset-sm-2 offset-lg-1 col-lg-3 portfolio-item no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke">
-                                            <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption></div>
-                                        <div class="col-sm-5 offset-lg-1 col-lg-3 portfolio-item no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/cert1.png" alt="FreeCodeCamp.org Responsive Web Design certificate">
-                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design">HTML/CSS Certificate</a></figcaption>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                            <a href="https://dstarrtrey.github.io/Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
+                                            <figcaption><a href="https://dstarrtrey.github.io/Word-Guess-Game/">Word Guess Game</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item col-sm-5 offset-sm-2 offset-lg-0 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/cert2.png" alt="FreeCodeCamp.org Javascript Certificate">
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="https://walkitoff.bandcamp.com/releases"><img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke"></a>
+                                            <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
+                                            <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
+                                            <figcaption class=""><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img class="img-fluid" src="assets/images/portfolio/cert2.png" alt="FreeCodeCamp.org Javascript Certificate"></a>
                                             <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures">JS Certificate</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/Calculator.png" alt="JavaScript Calculator">
+                                            <a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design"><img class="img-fluid" src="assets/images/portfolio/cert1.png" alt="FreeCodeCamp.org Responsive Web Design certificate"></a>
+                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design">HTML/CSS Certificate</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="http://davidstarr.me/Calculator.html"><img class="img-fluid" src="assets/images/portfolio/Calculator.png" alt="JavaScript Calculator"></a>
                                             <figcaption><a href="http://davidstarr.me/Calculator.html">JavaScript Calculator</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/musicBox.gif" alt="SolidWorks Music Box Animation">
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                            <a href="https://github.com/dstarrtrey/MusicBox/"><img class="img-fluid" src="assets/images/portfolio/musicBox.gif" alt="SolidWorks Music Box Animation"></a>
                                             <figcaption><a href="https://github.com/dstarrtrey/MusicBox/">SolidWorks Music Box</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/SeniorProject.png" alt="JavaScript MIDI to Music Score Converter">
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="http://davidstarr.me/SeniorProject.html"><img class="img-fluid" src="assets/images/portfolio/SeniorProject.png" alt="JavaScript MIDI to Music Score Converter"></a>
                                             <figcaption><a href="http://davidstarr.me/SeniorProject.html">MIDI to Score Converter</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator">
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
+                                            <a href="http://davidstarr.me/QuoteGenerator.html"><img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator"></a>
                                             <figcaption><a href="http://davidstarr.me/QuoteGenerator.html">Random Quote Generator</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/wikiViewer.jpg" alt="JQuery Wikipedia Viewer">
-                                            <figcaption><a href="http://davidstarr.me/WikipediaViewer.html">JQuery Wikipedia Viewer</a></figcaption>
-                                        </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/twitchViewer.jpg" alt="Twitch API Demonstration">
-                                            <figcaption><a href="http://davidstarr.me/TwitchViewer.html">Twitch API Demonstration</a></figcaption>
+                                            <a href="http://davidstarr.me/WikipediaViewer.html"><img class="img-fluid" src="assets/images/portfolio/wikiViewer.jpg" alt="JQuery Wikipedia Viewer"></a>
+                                            <figcaption><a href="http://davidstarr.me/WikipediaViewer.html">JQuery Wikipedia Viewer</a></figcaption>    
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock">
+                                            <a href="http://davidstarr.me/TwitchViewer.html"><img class="img-fluid" src="assets/images/portfolio/twitchViewer.jpg" alt="Twitch API Demonstration"></a>
+                                            <figcaption><a href="http://davidstarr.me/TwitchViewer.html">Twitch API Demonstration</a></figcaption>                                                
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
+                                            <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
                                             <figcaption><a href="https://codepen.io/dstarrtrey/pen/vjqqrw">JavaScript Pomodoro Clock</a></figcaption>
                                         </div>
                                     </div>
