adds item to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,16 +48,16 @@
                                 <section class="container-fluid">
                                     <div class="row">
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
-                                            <a href="https://dstarrtrey.github.io/Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
-                                            <figcaption><a href="https://dstarrtrey.github.io/Word-Guess-Game/">Word Guess Game</a></figcaption>
+                                            <a href="Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
+                                            <figcaption><a href="Word-Guess-Game/">Word Guess Game</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
                                             <a href="https://walkitoff.bandcamp.com/releases"><img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke"></a>
                                             <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
-                                            <figcaption class=""><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
+                                            <a href="Star-Wars-RPG/"><img class="img-fluid" src="assets/images/portfolio/starwars.png" alt="Star Wars RPG"></a>
+                                            <figcaption><a href="Star-Wars-RPG/">Star Wars RPG</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
                                             <a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img class="img-fluid" src="assets/images/portfolio/cert2.png" alt="FreeCodeCamp.org Javascript Certificate"></a>
@@ -80,8 +80,8 @@
                                             <figcaption><a href="http://davidstarr.me/SeniorProject.html">MIDI to Score Converter</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <a href="http://davidstarr.me/QuoteGenerator.html"><img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator"></a>
-                                            <figcaption><a href="http://davidstarr.me/QuoteGenerator.html">Random Quote Generator</a></figcaption>
+                                            <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
+                                            <figcaption class=""><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
                                             <a href="http://davidstarr.me/WikipediaViewer.html"><img class="img-fluid" src="assets/images/portfolio/wikiViewer.jpg" alt="JQuery Wikipedia Viewer"></a>
@@ -91,9 +91,13 @@
                                             <a href="http://davidstarr.me/TwitchViewer.html"><img class="img-fluid" src="assets/images/portfolio/twitchViewer.jpg" alt="Twitch API Demonstration"></a>
                                             <figcaption><a href="http://davidstarr.me/TwitchViewer.html">Twitch API Demonstration</a></figcaption>                                                
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
                                             <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
                                             <figcaption><a href="https://codepen.io/dstarrtrey/pen/vjqqrw">JavaScript Pomodoro Clock</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                            <a href="http://davidstarr.me/QuoteGenerator.html"><img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator"></a>
+                                            <figcaption><a href="http://davidstarr.me/QuoteGenerator.html">Random Quote Generator</a></figcaption>
                                         </div>
                                     </div>
                                 </section>
