redirects portfolio item to js-MIDISCORE

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,8 @@
                                             <figcaption><a href="https://github.com/dstarrtrey/MusicBox/">SolidWorks Music Box</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="http://davidstarr.me/SeniorProject.html"><img class="img-fluid" src="assets/images/portfolio/SeniorProject.png" alt="JavaScript MIDI to Music Score Converter"></a>
-                                            <figcaption><a href="http://davidstarr.me/SeniorProject.html">MIDI to Score Converter</a></figcaption>
+                                            <a href="js-MIDISCORE/"><img class="img-fluid" src="assets/images/portfolio/SeniorProject.png" alt="js-MIDISCORE"></a>
+                                            <figcaption><a href="js-MIDISCORE">MIDI to Score Converter</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
