adds trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,24 +60,24 @@
                                             <figcaption><a href="Star-Wars-RPG/">Star Wars RPG</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img class="img-fluid" src="assets/images/portfolio/cert2.png" alt="FreeCodeCamp.org Javascript Certificate"></a>
-                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures">JS Certificate</a></figcaption>
+                                            <a href="Trivia-Game/"><img class="img-fluid" src="assets/images/portfolio/trivia.png" alt="Javascript Trivia Game"></a>
+                                            <figcaption><a href="Trivia-Game/">Javascript Trivia Game</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design"><img class="img-fluid" src="assets/images/portfolio/cert1.png" alt="FreeCodeCamp.org Responsive Web Design certificate"></a>
                                             <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design">HTML/CSS Certificate</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
+                                             <a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img class="img-fluid" src="assets/images/portfolio/cert2.png" alt="FreeCodeCamp.org Javascript Certificate"></a>
+                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures">JS Certificate</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
                                             <a href="http://davidstarr.me/Calculator.html"><img class="img-fluid" src="assets/images/portfolio/Calculator.png" alt="JavaScript Calculator"></a>
                                             <figcaption><a href="http://davidstarr.me/Calculator.html">JavaScript Calculator</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
                                             <a href="https://github.com/dstarrtrey/MusicBox/"><img class="img-fluid" src="assets/images/portfolio/musicBox.gif" alt="SolidWorks Music Box Animation"></a>
                                             <figcaption><a href="https://github.com/dstarrtrey/MusicBox/">SolidWorks Music Box</a></figcaption>
-                                        </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="js-MIDISCORE/"><img class="img-fluid" src="assets/images/portfolio/SeniorProject.png" alt="js-MIDISCORE"></a>
-                                            <figcaption><a href="js-MIDISCORE">MIDI to Score Converter</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
@@ -98,6 +98,10 @@
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
                                             <a href="http://davidstarr.me/QuoteGenerator.html"><img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator"></a>
                                             <figcaption><a href="http://davidstarr.me/QuoteGenerator.html">Random Quote Generator</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="js-MIDISCORE/"><img class="img-fluid" src="assets/images/portfolio/SeniorProject.png" alt="js-MIDISCORE"></a>
+                                            <figcaption><a href="js-MIDISCORE">MIDI to Score Converter</a></figcaption>
                                         </div>
                                     </div>
                                 </section>
