adds GIPHY portfolio item

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,12 +48,12 @@
                                 <section class="container-fluid">
                                     <div class="row">
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
-                                            <a href="Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
-                                            <figcaption><a href="Word-Guess-Game/">Word Guess Game</a></figcaption>
+                                            <a href="/GIPHY-API-Webpage"><img src="assets/images/portfolio/giphy.png" alt="GIPHY & OMDb API Webpage" class="img-fluid"></a>
+                                            <figcaption><a href="/GIPHY-API-Webpage">GIPHY & OMDb API Webpage</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="https://walkitoff.bandcamp.com/releases"><img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke"></a>
-                                            <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption>
+                                            <a href="Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
+                                            <figcaption><a href="Word-Guess-Game/">Word Guess Game</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="Star-Wars-RPG/"><img class="img-fluid" src="assets/images/portfolio/starwars.png" alt="Star Wars RPG"></a>
@@ -95,13 +95,17 @@
                                             <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
                                             <figcaption><a href="https://codepen.io/dstarrtrey/pen/vjqqrw">JavaScript Pomodoro Clock</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">1
                                             <a href="http://davidstarr.me/QuoteGenerator.html"><img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator"></a>
                                             <figcaption><a href="http://davidstarr.me/QuoteGenerator.html">Random Quote Generator</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
                                             <a href="js-MIDISCORE/"><img class="img-fluid" src="assets/images/portfolio/SeniorProject.png" alt="js-MIDISCORE"></a>
                                             <figcaption><a href="js-MIDISCORE">MIDI to Score Converter</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
+                                            <a href="https://walkitoff.bandcamp.com/releases"><img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke"></a>
+                                            <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption>
                                         </div>
                                     </div>
                                 </section>
