adds Casey site to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,24 +76,24 @@
                                             <figcaption><a href="http://davidstarr.me/Calculator.html">JavaScript Calculator</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="https://github.com/dstarrtrey/MusicBox/"><img class="img-fluid" src="assets/images/portfolio/musicBox.gif" alt="SolidWorks Music Box Animation"></a>
-                                            <figcaption><a href="https://github.com/dstarrtrey/MusicBox/">SolidWorks Music Box</a></figcaption>
+                                            <a href="/kcrmccoy"><img src="assets/images/portfolio/kcrmccoy.png" alt="KCRMCCOY Portfolio Site" class="img-fluid"></a>
+                                            <figcaption><a href="/kcrmccoy">Kcrmccoy LEGO Portfolio site</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
-                                            <figcaption class=""><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
+                                            <figcaption><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="http://davidstarr.me/WikipediaViewer.html"><img class="img-fluid" src="assets/images/portfolio/wikiViewer.jpg" alt="JQuery Wikipedia Viewer"></a>
-                                            <figcaption><a href="http://davidstarr.me/WikipediaViewer.html">JQuery Wikipedia Viewer</a></figcaption>    
+                                            <a href="/Wikipedia-Viewer"><img class="img-fluid" src="assets/images/portfolio/wikiViewer.jpg" alt="JQuery Wikipedia Viewer"></a>
+                                            <figcaption><a href="/Wikipedia-Viewer">JQuery Wikipedia Viewer</a></figcaption>    
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="http://davidstarr.me/TwitchViewer.html"><img class="img-fluid" src="assets/images/portfolio/twitchViewer.jpg" alt="Twitch API Demonstration"></a>
                                             <figcaption><a href="http://davidstarr.me/TwitchViewer.html">Twitch API Demonstration</a></figcaption>                                                
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
-                                            <figcaption><a href="https://codepen.io/dstarrtrey/pen/vjqqrw">JavaScript Pomodoro Clock</a></figcaption>
+                                            <a href="https://github.com/dstarrtrey/MusicBox/"><img class="img-fluid" src="assets/images/portfolio/musicBox.gif" alt="SolidWorks Music Box Animation"></a>
+                                            <figcaption><a href="https://github.com/dstarrtrey/MusicBox/">SolidWorks Music Box</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">1
                                             <a href="http://davidstarr.me/QuoteGenerator.html"><img class="img-fluid" src="assets/images/portfolio/randQuoteGen.jpg" alt="Random Quote Generator"></a>
@@ -106,6 +106,10 @@
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="https://walkitoff.bandcamp.com/releases"><img class="img-fluid" src="assets/images/portfolio/walkItOff.jpg" alt="Walk it Off—Inside Joke"></a>
                                             <figcaption><a href="https://walkitoff.bandcamp.com/releases">Walk it off—Inside Joke</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
+                                            <figcaption><a href="https://codepen.io/dstarrtrey/pen/vjqqrw">JavaScript Pomodoro Clock</a></figcaption>
                                         </div>
                                     </div>
                                 </section>
