--- a/portfolio.html
+++ b/portfolio.html
@@ -60,24 +60,24 @@
                                             <figcaption><a href="Star-Wars-RPG/">Star Wars RPG</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="Trivia-Game/"><img class="img-fluid" src="assets/images/portfolio/trivia.png" alt="Javascript Trivia Game"></a>
-                                            <figcaption><a href="Trivia-Game/">Javascript Trivia Game</a></figcaption>
+                                            <a href="/kcrmccoy"><img src="assets/images/portfolio/kcrmccoy.png" alt="KCRMCCOY Portfolio Site" class="img-fluid"></a>
+                                            <figcaption><a href="/kcrmccoy">Kcrmccoy LEGO Portfolio</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design"><img class="img-fluid" src="assets/images/portfolio/cert1.png" alt="FreeCodeCamp.org Responsive Web Design certificate"></a>
-                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design">HTML/CSS Certificate</a></figcaption>
-                                        </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                             <a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img class="img-fluid" src="assets/images/portfolio/cert2.png" alt="FreeCodeCamp.org Javascript Certificate"></a>
-                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures">JS Certificate</a></figcaption>
-                                        </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
                                             <a href="http://davidstarr.me/Calculator.html"><img class="img-fluid" src="assets/images/portfolio/Calculator.png" alt="JavaScript Calculator"></a>
                                             <figcaption><a href="http://davidstarr.me/Calculator.html">JavaScript Calculator</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="/kcrmccoy"><img src="assets/images/portfolio/kcrmccoy.png" alt="KCRMCCOY Portfolio Site" class="img-fluid"></a>
-                                            <figcaption><a href="/kcrmccoy">Kcrmccoy LEGO Portfolio site</a></figcaption>
+                                            <a href="Trivia-Game/"><img class="img-fluid" src="assets/images/portfolio/trivia.png" alt="Javascript Trivia Game"></a>
+                                            <figcaption><a href="Trivia-Game/">Javascript Trivia Game</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                            <a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design"><img class="img-fluid" src="assets/images/portfolio/cert1.png" alt="FreeCodeCamp.org Responsive Web Design certificate"></a>
+                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design">HTML/CSS Certificate</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures"><img class="img-fluid" src="assets/images/portfolio/cert2.png" alt="FreeCodeCamp.org Javascript Certificate"></a>
+                                            <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures">JS Certificate</a></figcaption>    
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
