Adds RPS Multiplayer

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,12 +52,12 @@
                                             <figcaption><a href="/GIPHY-API-Webpage">GIPHY & OMDb API Webpage</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
+                                            <a href="/Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
                                             <figcaption><a href="Word-Guess-Game/">Word Guess Game</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <a href="Star-Wars-RPG/"><img class="img-fluid" src="assets/images/portfolio/starwars.png" alt="Star Wars RPG"></a>
-                                            <figcaption><a href="Star-Wars-RPG/">Star Wars RPG</a></figcaption>
+                                            <a href="/RPS-Multiplayer"><img src="assets/images/portfolio/rps.png" alt="Rock Paper Scissors Multiplayer" class="img-fluid"></a>
+                                            <figcaption><a href="/RPS-Multiplayer/">Rock, Paper, Scissors Multiplayer</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
                                             <a href="/kcrmccoy"><img src="assets/images/portfolio/kcrmccoy.png" alt="KCRMCCOY Portfolio Site" class="img-fluid"></a>
@@ -68,8 +68,8 @@
                                             <figcaption><a href="http://davidstarr.me/Calculator.html">JavaScript Calculator</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="Trivia-Game/"><img class="img-fluid" src="assets/images/portfolio/trivia.png" alt="Javascript Trivia Game"></a>
-                                            <figcaption><a href="Trivia-Game/">Javascript Trivia Game</a></figcaption>
+                                            <a href="Star-Wars-RPG/"><img class="img-fluid" src="assets/images/portfolio/starwars.png" alt="Star Wars RPG"></a>
+                                            <figcaption><a href="Star-Wars-RPG/">Star Wars RPG</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
                                             <a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design"><img class="img-fluid" src="assets/images/portfolio/cert1.png" alt="FreeCodeCamp.org Responsive Web Design certificate"></a>
@@ -110,6 +110,10 @@
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
                                             <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
                                             <figcaption><a href="https://codepen.io/dstarrtrey/pen/vjqqrw">JavaScript Pomodoro Clock</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                            <a href="Trivia-Game/"><img class="img-fluid" src="assets/images/portfolio/trivia.png" alt="Javascript Trivia Game"></a>
+                                            <figcaption><a href="Trivia-Game/">Javascript Trivia Game</a></figcaption>
                                         </div>
                                     </div>
                                 </section>
