--- a/portfolio.html
+++ b/portfolio.html
@@ -44,16 +44,15 @@
                                 </div>
                             </div>
                             <div class="row">
-                                
                                 <section class="container-fluid">
                                     <div class="row">
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
-                                            <a href="/GIPHY-API-Webpage"><img src="assets/images/portfolio/giphy.png" alt="GIPHY & OMDb API Webpage" class="img-fluid"></a>
-                                            <figcaption><a href="/GIPHY-API-Webpage">GIPHY & OMDb API Webpage</a></figcaption>
+                                            <a href="/Chess-Board-2Player"><img src="assets/images/portfolio/chess.png" alt="2-Player Online Chess Game" class="img-fluid"></a>
+                                            <figcaption><a href="/Chess-Board-2Player">2-Player Online Chess Game</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="/Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
-                                            <figcaption><a href="Word-Guess-Game/">Word Guess Game</a></figcaption>
+                                            <a href="/GIPHY-API-Webpage"><img src="assets/images/portfolio/giphy.png" alt="GIPHY & OMDb API Webpage" class="img-fluid"></a>
+                                            <figcaption><a href="/GIPHY-API-Webpage">GIPHY & OMDb API Webpage</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="/RPS-Multiplayer"><img src="assets/images/portfolio/rps.png" alt="Rock Paper Scissors Multiplayer" class="img-fluid"></a>
@@ -68,8 +67,8 @@
                                             <figcaption><a href="http://davidstarr.me/Calculator.html">JavaScript Calculator</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
-                                            <a href="Star-Wars-RPG/"><img class="img-fluid" src="assets/images/portfolio/starwars.png" alt="Star Wars RPG"></a>
-                                            <figcaption><a href="Star-Wars-RPG/">Star Wars RPG</a></figcaption>
+                                            <a href="/Word-Guess-Game/"><img class="img-fluid" src="assets/images/portfolio/hangman.png" alt="Wild West Word Guess Game"></a>
+                                            <figcaption><a href="Word-Guess-Game/">Word Guess Game</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
                                             <a href="https://www.freecodecamp.org/certification/dstarrtrey/responsive-web-design"><img class="img-fluid" src="assets/images/portfolio/cert1.png" alt="FreeCodeCamp.org Responsive Web Design certificate"></a>
@@ -80,8 +79,8 @@
                                             <figcaption><a href="https://www.freecodecamp.org/certification/dstarrtrey/javascript-algorithms-and-data-structures">JS Certificate</a></figcaption>    
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
-                                            <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
-                                            <figcaption><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
+                                            <a href="Star-Wars-RPG/"><img class="img-fluid" src="assets/images/portfolio/starwars.png" alt="Star Wars RPG"></a>
+                                            <figcaption><a href="Star-Wars-RPG/">Star Wars RPG</a></figcaption>
                                         </div>
                                         <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 offset-sm-2 no-padding">
                                             <a href="/Wikipedia-Viewer"><img class="img-fluid" src="assets/images/portfolio/wikiViewer.jpg" alt="JQuery Wikipedia Viewer"></a>
@@ -111,9 +110,13 @@
                                             <a href="https://codepen.io/dstarrtrey/pen/vjqqrw"><img class="img-fluid" src="assets/images/portfolio/pomodoro.png" alt="JavaScript Pomodoro Clock"></a>
                                             <figcaption><a href="https://codepen.io/dstarrtrey/pen/vjqqrw">JavaScript Pomodoro Clock</a></figcaption>
                                         </div>
-                                        <div class="col-lg-3 portfolio-item offset-lg-0 col-sm-5 no-padding">
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 no-padding">
                                             <a href="Trivia-Game/"><img class="img-fluid" src="assets/images/portfolio/trivia.png" alt="Javascript Trivia Game"></a>
                                             <figcaption><a href="Trivia-Game/">Javascript Trivia Game</a></figcaption>
+                                        </div>
+                                        <div class="col-lg-3 portfolio-item offset-lg-1 col-sm-5 offset-sm-2 no-padding">
+                                            <a href="http://www.davidstarr.me"><img class="img-fluid" src="assets/images/portfolio/portfolioSite.png" alt="Portfolio Website"></a>
+                                            <figcaption><a href="http://www.davidstarr.me">www.davidstarr.me</a></figcaption>
                                         </div>
                                     </div>
                                 </section>
