--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                             <div class="col-lg-2 col-xl-4 col-md-1"></div>
                             <div class="text-right col-md-5 col-lg-5 col-xl-4 col-sm-12 no-padding">
                                 <nav class="navbar navbar-right">
-                                    <a class="nav-link nav-item active" href="index.html">About Me</a><a class="nav-link nav-item" href="portfolio.html">Portfolio</a><a class="nav-link nav-item" href="contact.html">Contact</a>
+                                    <a class="nav-link nav-item active" href="index.html">About Me</a><a class="nav-link nav-item" href="portfolio.html">Portfolio</a>
                                 </nav>
                             </div> 
                         </header>
